--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *.csv
 *.json
+go.mod 
+go.sum
 
 # extracted from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
