fix(windows) : Bugs asociados
Se corrige el Readme para posible uso en windows

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 *.json
 go.mod 
 go.sum
-maindns_drdns
-maindns_rest
+main_drdns
+main_rest
+main_drdns.exe
 
 # extracted from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
