chore: remove tracked mmdb files and update .gitignore
Stop tracking '.mmdb' files and ensure they are excluded via '.gitignore' to prevent committing large temporary files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ main_drdnsg
 main_rest
 main_drdns.exe
 config.yml
-.idea/
 
 # extracted from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
@@ -178,4 +177,10 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+# Ignorar archivos binarios MMDB
+*.mmdb
+
+# Ignorar carpetas GeoLite descargadas
+GeoLite2-*/
