chore: ignore GeoLite2-* folders

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ main_drdns
 main_rest
 main_drdns.exe
 config.yml
+GeoLite2-*
 
 # extracted from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
